# project-dawn

./: .dockerignore  .env  .env.example  .gitignore  .taurignore  API_REFERENCE.md  CHANGELOG.md  CODE_REVIEW_SUMMARY.md  DATA_PERSISTENCE_IMPLEMENTATION.md  DATA_PROTECTION_IMPROVEMENTS.md  DEPLOYMENT.md  DEPLOYMENT_IMPLEMENTATION.md  DIAGNOSTIC_REPORT.md  Dockerfile  INCOMPLETE_TASKS_AND_IMPROVEMENTS.md  OBSERVABILITY_IMPLEMENTATION.md  PHASE4_IMPLEMENTATION_COMPLETE.md  PRODUCTION_READINESS.md  README.md  README_V2_DECENTRALIZED.md  RESILIENCE_IMPROVEMENTS.md  RESILIENCE_INTEGRATION_IMPLEMENTATION.md  ROADMAP.md  ROADMAP_TO_90_PERCENT.md  RUNBOOK.md  SECURITY_IMPROVEMENTS.md  TODO_REVIEW.md  communication.py  compute.py  data_paths.py  dawn  discovery.py  docker-compose.yml  launch.py  logging_config.py  orchestrator.py  package-lock.json  package.json  reputation.py  requirements-test.txt  (+8 more)
agents/: __init__.py  base_agent.py  code_agent.py  coordination_agent.py  first_agent.py  task_manager.py
cli/: __init__.py  backup.py  interactive.py  main.py  restore.py  server_manager.py
config/: __init__.py  config.py  default.yaml
consensus/: __init__.py  agent_registry.py  crdt.py  task_registry.py
core/: __init__.py  advanced_memory_integration.py  agent_policy.py  consciousness.py  db_migrations.py  dream_integration.py  evolution_engine.py  evolution_integration.py  evolution_manager.py  git_tools.py  http_tools.py  knowledge_integration.py  liberation_integration.py  memory_config.py  memos_integration.py  ops_log.py  orchestrator.py  patronage_integration.py  real_consciousness.py  security_integration.py  social_economy_integration.py  task_manager.py
crypto/: __init__.py  encryption.py  identity.py  key_exchange.py  signing.py  utils.py
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/src/: main.rs
(+357 files in other folders)
