[package]
name = "project-dawn"
version = "0.1.0"
description = "Project Dawn - Decentralized Multi-Agent Network"
authors = ["Project Dawn Team"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-minimize", "window-unminimize", "window-start-dragging", "window-hide", "window-close", "window-show", "window-unmaximize", "window-maximize", "shell-sidecar", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
sysinfo = "0.30"
chrono = { version = "0.4", features = ["std"] }

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
